# generative-flow-adapters

./: .gitignore  .orchestra-skills.json  CLAUDE.md  README.md  pyproject.toml
configs/: diffusion_hidden_full_skip_controlnet.yaml  diffusion_hidden_replace_decoder.yaml  diffusion_hidden_unicon_decoder.yaml  diffusion_hyper_lora_action.yaml  diffusion_hyperalign_action.yaml  diffusion_hyperalign_fake_action.yaml  diffusion_hyperalign_metaworld.yaml  diffusion_lora_action.yaml  diffusion_multimodal_hyper.yaml  diffusion_output_avid_training_test.yaml  diffusion_output_dynamicrafter.yaml  diffusion_output_dynamicrafter_shortcut_test.yaml  diffusion_output_shortcut_noise.yaml  diffusion_output_shortcut_velocity.yaml  flow_hyper_shortcut_stepwise.yaml  flow_output_shortcut.yaml  flow_output_shortcut_velocity.yaml  opensora_output_adapter.yaml  test_dynamicrafter_hyperalign_unet.yaml  test_dynamicrafter_metaworld_unet.yaml
docs/: cosmos-predict2.5-integration-report.md  foundation-architecture.md  hyperalign-architecture-replication.md  open-video-base-models.md  open_sora_analysis.md  opensora_vs_dynamicrafter_architecture_report.md  shortcut_action_summary.md
examples/: build_model.py  check_output_composition.py  hyper_shortcut_training_test.py  hyperalign_fake_training.py  shortcut_training_test.py  smoke_train_step.py  test_opensora_adapter.py  train_with_metaworld.py  training_test.py
scripts/: train_hyperalign_metaworld.py
tests/: test_batch_preprocessor.py  test_dynamicrafter_checkpoint_sanity.py  test_dynamicrafter_integration.py  test_metaworld_dataset.py  (+4 more)
(+97 files in other folders)
